feat: 新增部门管理功能
- 添加部门管理相关的 API 接口和数据结构
- 实现部门列表展示、新增、编辑和删除功能
- 添加部门名称存在性校验
- 优化表单组件，支持树形结构选择
- 更新国际化文案

--- a/apps/web-ele/src/locales/langs/zh-CN/system.json
+++ b/apps/web-ele/src/locales/langs/zh-CN/system.json
@@ -8,7 +8,9 @@
     "parentDept": "上级部门",
     "remark": "备注",
     "status": "状态",
-    "title": "部门管理"
+    "title": "部门管理",
+    "Markup": "加价",
+    "MarkupType": "加价类型"
   },
   "menu": {
     "list": "菜单列表",
